# sarsim0

./: CITATION.cff  README.md  pyproject.toml
sarsim0/: __init__.py  config.py  covariates.py  multivariate.py  noisers.py  pipeline.py  sarima.py  sarima2.py  streaming_dataset.py
tests/: __init__.py  conftest.py  test_config.py  test_covariates.py  test_multivariate.py  test_noisers.py  test_pipeline.py  test_sarima.py  test_sarima2.py  test_sarima_invariants.py  test_streaming_dataset.py  test_trainer_smoke.py
